--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
+  "engines":{
+    "node":"9.8.0"
+  },
   "author": "Isazaki",
   "license": "ISC",
   "dependencies": {
