--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
-  "engines":{
-    "node":"9.8.0"
+  "engines": {
+    "node": "9.8.0"
   },
   "author": "Isazaki",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.17.5",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
   },
