--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Isazaki",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.15.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.14.0",
